--- a/KiCad/SignalSnagger/SignalSnagger.html
+++ b/KiCad/SignalSnagger/SignalSnagger.html
@@ -137,9 +137,9 @@ hr{
 <body>
     <div id="main">
         <div id="TableId">
-            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.315</h1></a> <div id="logo"></div></div>
+            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.317</h1></a> <div id="logo"></div></div>
             <div id="BOMInfoID">
-                <strong>Date<h1> 2024-04-01</h1></strong>
+                <strong>Date<h1> 2024-04-13</h1></strong>
                 <strong>Total Parts<h1> 223 (Unique 79)</h1></strong>
             </div>
             <div class="group_head"><strong><div class="partRow"><div class='Head HeadRefTag'>Ref</div><div class='Head HeadQtyTag'>QTY PER</div><div class='Head HeadValueTag'>Value</div><div class='Head HeadFootprintTag'>Footprint</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Description</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Digi-Key Part No.</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>LCSC Part Number</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Link</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer PN</div></strong></div></div>
@@ -1326,17 +1326,17 @@ hr{
     <div class="column HeadValueTag">10k 10T</div>
     <div class="column HeadFootprintTag">Potentiometer_THT:Potentiometer_Bourns_3362P_Vertical</div>
     
-<div class="column FiledClass Field_Description">10 kOhms 0.5W  1/2W PC Pins Through Hole Trimmer Potentiometer Cermet 25 Turn Top Adjustment</div>
+<div class="column FiledClass Field_Description">TRIMMER 10K OHM 0.5W PC PIN TOP</div>
 
-<div class="column FiledClass Field_Digi-Key Part No.">118-PV36W103C01B00-ND</div>
+<div class="column FiledClass Field_Digi-Key Part No.">3362P-103LF-ND</div>
 
 <div class="column FiledClass Field_LCSC Part Number"> </div>
 
-<div class="column FiledClass Field_Link">https://www.digikey.com/en/products/detail/bourns-inc/PV36W103C01B00/666502?s=N4IgTCBcDaIAoDUDMA2A6gRgAxIMJYwCEssQBdAXyA</div>
+<div class="column FiledClass Field_Link">https://www.digikey.com/en/products/detail/bourns-inc/3362P-1-103LF/1088412?s=N4IgTCBcDaIMxwGxgAoFoCMAGOAZAYmgHIAiIAugL5A</div>
 
 <div class="column FiledClass Field_Manufacturer">Bourns Inc.</div>
 
-<div class="column FiledClass Field_Manufacturer PN">PV36W103C01B00</div>
+<div class="column FiledClass Field_Manufacturer PN">3362P-1-103LF</div>
 
 </div>
 <div class="partRow RowOddTag">
