--- a/KiCad/SignalSnagger/SignalSnagger.html
+++ b/KiCad/SignalSnagger/SignalSnagger.html
@@ -1550,15 +1550,15 @@ hr{
     
 <div class="column FiledClass Field_Description">IC VREF SERIES 0.05% SOT23-5</div>
 
-<div class="column FiledClass Field_Digi-Key Part No.">296-REF4132B33DBVRCT-ND</div>
+<div class="column FiledClass Field_Digi-Key Part No.">296-REF4132B25DBVRCT-ND</div>
 
 <div class="column FiledClass Field_LCSC Part Number"> </div>
 
-<div class="column FiledClass Field_Link">https://www.digikey.com/en/products/detail/texas-instruments/REF4132B33DBVR/12642193</div>
+<div class="column FiledClass Field_Link">https://www.digikey.com/short/47jz2mvv</div>
 
 <div class="column FiledClass Field_Manufacturer">Texas Instruments</div>
 
-<div class="column FiledClass Field_Manufacturer PN">REF4132B33DBVR</div>
+<div class="column FiledClass Field_Manufacturer PN">REF4132B25DBVR</div>
 
 </div>
 <div class="partRow RowOddTag">
