--- a/KiCad/SignalSnagger/SignalSnagger.html
+++ b/KiCad/SignalSnagger/SignalSnagger.html
@@ -140,7 +140,7 @@ hr{
             <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.318</h1></a> <div id="logo"></div></div>
             <div id="BOMInfoID">
                 <strong>Date<h1> 2024-06-01</h1></strong>
-                <strong>Total Parts<h1> 219 (Unique 79)</h1></strong>
+                <strong>Total Parts<h1> 217 (Unique 79)</h1></strong>
             </div>
             <div class="group_head"><strong><div class="partRow"><div class='Head HeadRefTag'>Ref</div><div class='Head HeadQtyTag'>QTY PER</div><div class='Head HeadValueTag'>Value</div><div class='Head HeadFootprintTag'>Footprint</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Description</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Digi-Key Part No.</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>LCSC Part Number</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Link</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer PN</div></strong></div></div>
             <hr>
@@ -695,8 +695,8 @@ hr{
 
 </div>
 <div class="partRow RowEvenTag">
-    <div class="column HeadRefTag">J201 J202 J205 J206 J207 J210 J211 J212 J213 J214 J215 </div>
-    <div class="column HeadQtyTag">11</div>
+    <div class="column HeadRefTag">J201 J202 J205 J206 J207 J210 J211 J215 </div>
+    <div class="column HeadQtyTag">8</div>
     <div class="column HeadValueTag">Conn_01x01_Female</div>
     <div class="column HeadFootprintTag">Oddities:Dummy_Empty</div>
     
@@ -733,8 +733,8 @@ hr{
 
 </div>
 <div class="partRow RowEvenTag">
-    <div class="column HeadRefTag">J208 </div>
-    <div class="column HeadQtyTag">1</div>
+    <div class="column HeadRefTag">J208 J209 </div>
+    <div class="column HeadQtyTag">2</div>
     <div class="column HeadValueTag">Conn_01x04</div>
     <div class="column HeadFootprintTag">Connector_PinHeader_1.27mm:PinHeader_1x04_P1.27mm_Vertical</div>
     
