--- a/KiCad/SignalSnagger/SignalSnagger.html
+++ b/KiCad/SignalSnagger/SignalSnagger.html
@@ -137,10 +137,10 @@ hr{
 <body>
     <div id="main">
         <div id="TableId">
-            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.321</h1></a> <div id="logo"></div></div>
+            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.322</h1></a> <div id="logo"></div></div>
             <div id="BOMInfoID">
-                <strong>Date<h1> 2024-06-09</h1></strong>
-                <strong>Total Parts<h1> 223 (Unique 83)</h1></strong>
+                <strong>Date<h1> 2024-06-19</h1></strong>
+                <strong>Total Parts<h1> 224 (Unique 83)</h1></strong>
             </div>
             <div class="group_head"><strong><div class="partRow"><div class='Head HeadRefTag'>Ref</div><div class='Head HeadQtyTag'>QTY PER</div><div class='Head HeadValueTag'>Value</div><div class='Head HeadFootprintTag'>Footprint</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Description</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Digi-Key Part No.</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>LCSC Part Number</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Link</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer PN</div></strong></div></div>
             <hr>
@@ -852,8 +852,8 @@ hr{
 <hr>
 <div class="group">
 	<div class="partRow RowOddTag">
-    <div class="column HeadRefTag">L101 L201 </div>
-    <div class="column HeadQtyTag">2</div>
+    <div class="column HeadRefTag">L101 L201 L202 </div>
+    <div class="column HeadQtyTag">3</div>
     <div class="column HeadValueTag">10uH</div>
     <div class="column HeadFootprintTag">Inductor_SMD:L_0603_1608Metric</div>
     
