--- a/KiCad/SignalSnagger/SignalSnagger.html
+++ b/KiCad/SignalSnagger/SignalSnagger.html
@@ -137,10 +137,10 @@ hr{
 <body>
     <div id="main">
         <div id="TableId">
-            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.324</h1></a> <div id="logo"></div></div>
+            <div class="Header"><a href=""><h1>SignalSnagger BOM <br>Rev 0.325</h1></a> <div id="logo"></div></div>
             <div id="BOMInfoID">
                 <strong>Date<h1> 2024-07-12</h1></strong>
-                <strong>Total Parts<h1> 223 (Unique 84)</h1></strong>
+                <strong>Total Parts<h1> 222 (Unique 84)</h1></strong>
             </div>
             <div class="group_head"><strong><div class="partRow"><div class='Head HeadRefTag'>Ref</div><div class='Head HeadQtyTag'>QTY PER</div><div class='Head HeadValueTag'>Value</div><div class='Head HeadFootprintTag'>Footprint</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Description</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Digi-Key Part No.</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>LCSC Part Number</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Link</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>Manufacturer PN</div></strong></div></div>
             <hr>
@@ -1028,8 +1028,8 @@ hr{
 
 </div>
 <div class="partRow RowOddTag">
-    <div class="column HeadRefTag">R103 R105 R110 R122 R206 R207 R212 R213 R214 R215 R303 R308 R907 </div>
-    <div class="column HeadQtyTag">13</div>
+    <div class="column HeadRefTag">R103 R105 R110 R122 R206 R207 R212 R213 R214 R303 R308 R907 </div>
+    <div class="column HeadQtyTag">12</div>
     <div class="column HeadValueTag">10k</div>
     <div class="column HeadFootprintTag">Resistor_SMD:R_0603_1608Metric</div>
     
